[tool.poetry]
name = "ai-news"
version = "0.1.0"
description = "Just cover the goddamn AI news, Marketing!"
authors = ["bartosz roguski <bartosz.k.roguski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.2"
feedparser = "^6.0.11"
torch = "^2.3.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
